--- a/samplesite/bboard/templates/bboard/index.html
+++ b/samplesite/bboard/templates/bboard/index.html
@@ -17,6 +17,7 @@
     <h2>{{ bb.title }}</h2>
     <p>{{ bb.content }}</p>
       <p><a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
+      <a href="{% url 'add' %}">Добавить</a>
     <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
   </div>
   {% endfor %}
